--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-currency-masked-input": "^2.5.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
